# symbolic_fact_generation

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/: arm_postures.yaml  boundingboxes.yaml  facts_config.yaml  table_poses.yaml  waypoints.yaml
launch/: fact_generation.launch
msg/: ChangedFacts.msg  Fact.msg  Facts.msg
nodes/: fact_publisher
src/symbolic_fact_generation/: fact_generation_with_config.py  generator_interface.py  on_fact_generator.py  robot_facts_generator.py
src/symbolic_fact_generation/common/: Fact.py  aabb.py  collision_checking.py  fact.py  lib.py
test/: test_symbolic_fact_generation_collision.py  test_symbolic_fact_generation_lib.py  test_symbolic_fact_generation_on_generator.py
