<?xml version="1.0"?>
<package format="2">
  <name>symbolic_fact_generation</name>
  <version>1.0.0</version>
  <description>The symbolic_fact_generation package</description>

  <maintainer email="marian.renz@dfki.de">Marian Renz</maintainer>
  <maintainer email="marc.vinci@dfki.de">Marc Vinci</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>pose_selector</exec_depend>

</package>
